# bevy_openai

./: Cargo.toml  README.md  README_CN.md
examples/: chat_completion.rs
src/: ai_client.rs  ai_ecs.rs  lib.rs
