[package]
name = "bevy_openai"
version = "0.1.1"
edition = "2021"
authors = ["Enter <hytracen@gmail.com>"]
keywords = ["bevy", "openai", "gpt"]
license = "Apache-2.0"
repository = "https://github.com/hytracen/bevy_openai"
description = "bevy_openai is an event-driven plugin for Bevy that provides convenient access to the OpenAI API."
readme = "README.md"

[dependencies]
bevy = "0.12.1"
openai-api-rs = "4.0.4"
futures-lite = "2.2.0"
derive_builder = "0.13.0"

[examples]
chat_completion = { path = "examples/chat_completion.rs" }